--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+:root {
+    --header-bg: #10375C;
+    --primary-color: #2E80CE
+}
+
 html {
     font-size: 62.5%;
 }
@@ -10,4 +15,69 @@ body {
     font-size: 1.6rem;
     font-family: "Sora", sans-serif;
 
+}
+
+/* Common */
+a {
+    text-decoration: none;
+}
+
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+
+/* Header */
+.header {
+    min-height: 100vh;
+    background-color: var(--header-bg);
+}
+
+.logo {
+    display: inline-flex;
+    position: relative;
+    font-size: 1rem;
+
+}
+
+.logo__circle::before,
+.logo__circle::after {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+}
+
+.logo__circle::before {
+    width: 3em;
+    height: 3em;
+    background-color: var(--primary-color);
+}
+
+.logo__circle::after {
+    position: absolute;
+    left: 1.1em;
+    top: 1.1em;
+    width: 1.6em;
+    height: 1.6em;
+    background-color: #fff;
+}
+
+.logo__text {
+    margin-left: 0.6em;
+    text-align: right;
+    line-height: 1.6em;
+}
+
+.logo__brand {
+    display: block;
+    color: #fff;
+    font-size: 1.8em;
+    font-weight: 400;
+
+}
+
+.logo__brand--small {
+    font-size: 1.2em;
+    font-weight: 300;
 }
