--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -297,6 +297,7 @@ a {
     box-shadow: 0px 14px 28px 0px #0000000D;
 
 }
+
 .service-item:hover .service-item__icon {
     background: var(--primary-color);
     color: #fff;
@@ -328,4 +329,60 @@ a {
     font-weight: 300;
     line-height: 1.75;
     color: #575F66;
+}
+
+/* Work */
+.work {
+    padding: 100px 0;
+    background: #F6FBFF;
+}
+
+.work__desc {
+    width: 468px;
+}
+
+.work__list {
+    margin-top: 86px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+}
+
+.work-item {
+    background-color: #fff;
+    border: 16px solid #EAF6FF;
+    border-radius: 4px;
+    padding: 42px;
+    transition: 0.25s;
+}
+.work-item:hover {
+    border-color: var(--primary-color);
+    transform: translateY(-16px);
+}
+.work-item__heading {
+    margin-top: 18px;
+    font-size: 2.6rem;
+    font-weight: 600;
+    line-height: 1.38;
+    color: var(--header-bg);
+
+}
+
+.work-item__desc {
+    margin-top: 28px;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 1.75;
+    color: #575F66;
+
+}
+
+.work-item__link {
+    display: inline-block;
+    margin-top: 18px;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 1.75;
+    color: var(--primary-color);
+
 }
