--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -355,10 +355,12 @@ a {
     padding: 42px;
     transition: 0.25s;
 }
+
 .work-item:hover {
     border-color: var(--primary-color);
     transform: translateY(-16px);
 }
+
 .work-item__heading {
     margin-top: 18px;
     font-size: 2.6rem;
@@ -385,4 +387,44 @@ a {
     line-height: 1.75;
     color: var(--primary-color);
 
+}
+
+/* Feature */
+
+.feature {
+    margin-top: 85px;
+    padding: 85px 0;
+}
+
+.feature__inner {
+    display: flex;
+    align-items: center;
+    gap: 130px;
+}
+
+.feature__images {
+    position: relative;
+    width: 49%;
+    padding: 0 58px 121px 0;
+
+}
+
+
+
+.feature_img {
+    width: 512px;
+    height: 370px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.feature_img:last-child {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 332px;
+    height: 370px;
+}
+.feature__cta {
+    margin-top: 38px;
 }
