--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -425,6 +425,98 @@ a {
     width: 332px;
     height: 370px;
 }
+
 .feature__cta {
     margin-top: 38px;
+}
+
+/* Member */
+.member {
+    padding: 85px 0;
+    text-align: center;
+}
+
+.member__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.member__cta {
+    margin-top: 38px;
+}
+
+.member__list {
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 30px;
+}
+
+
+
+.member-item:hover .member-item__thumb {
+    transform: scale(1.1);
+}
+
+.member-item__img-bg {
+    background: #EAF6FF;
+    padding-top: 28px;
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.member-item__thumb {
+    display: block;
+    max-width: 100%;
+    height: 290px;
+    object-fit: cover;
+    transition: 0.25s;
+}
+
+.member-item__name {
+    margin-top: 12px;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: var(--header-bg);
+
+}
+
+.member-item__title {
+    font-size: 1.4rem;
+    line-height: 1.85;
+    color: #575F66;
+
+}
+
+.member__control {
+    margin-top: 38px;
+    display: flex;
+    justify-content: center;
+    column-gap: 18px;
+}
+
+.member__control-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    color: #575F66;
+    background: #fff;
+    outline: none;
+    border: 1px solid #575F66;
+    transition: 0.25s;
+}
+
+.member__control-btn:hover {
+    background: var(--primary-color);
+    border-color: var(--primary-color);
+    color: #fff;
+    cursor: pointer;
+}
+
+.member__control-next-icon {
+    rotate: 180deg;
 }
