--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -520,3 +520,44 @@ a {
 .member__control-next-icon {
     rotate: 180deg;
 }
+
+/* Install */
+.install {
+    margin-top: 180px;
+}
+
+.install__inner {
+    background: var(--primary-color);
+    padding: 0 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 4px;
+}
+
+.install__thumb {
+    margin-top: -95px;
+    width: 284px;
+    height: 522px;
+    object-fit: cover;
+    display: block;
+}
+
+.install__content {
+    max-width: 586px
+}
+
+.install__heading,
+.install__desc {
+    color: #fff;
+}
+
+.install__heading {
+    max-width: 489px;
+}
+
+.install__row {
+    margin-top: 38px;
+    display: flex;
+    column-gap: 28px;
+}
