--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,6 +66,36 @@ a {
     color: #575F66;
 }
 
+.control {
+    display: flex;
+    column-gap: 18px;
+}
+
+.control__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    color: #575F66;
+    background: #fff;
+    outline: none;
+    border: 1px solid #575F66;
+    transition: 0.25s;
+}
+
+.control__btn:hover {
+    background: var(--primary-color);
+    border-color: var(--primary-color);
+    color: #fff;
+    cursor: pointer;
+}
+
+.control-next-icon {
+    rotate: 180deg;
+}
+
 /* Header */
 .header {
     min-height: 100vh;
@@ -490,36 +520,11 @@ a {
 }
 
 .member__control {
+    justify-content: center;
     margin-top: 38px;
-    display: flex;
-    justify-content: center;
-    column-gap: 18px;
+
 }
 
-.member__control-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    color: #575F66;
-    background: #fff;
-    outline: none;
-    border: 1px solid #575F66;
-    transition: 0.25s;
-}
-
-.member__control-btn:hover {
-    background: var(--primary-color);
-    border-color: var(--primary-color);
-    color: #fff;
-    cursor: pointer;
-}
-
-.member__control-next-icon {
-    rotate: 180deg;
-}
 
 /* Install */
 .install {
@@ -560,4 +565,116 @@ a {
     margin-top: 38px;
     display: flex;
     column-gap: 28px;
+}
+
+/* News */
+.news {
+    margin-top: 85px;
+    padding: 85px 0;
+}
+
+.news__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.news__content {
+    max-width: 470px;
+    flex-shrink: 0;
+}
+
+
+.news__more {
+    margin-top: 28px;
+    display: inline-block;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.55;
+    color: var(--header-bg);
+    text-decoration: underline;
+    text-underline-offset: 5px;
+
+}
+
+.news__control {
+    margin-top: 28px;
+}
+
+.news__list {
+    display: flex;
+    column-gap: 30px;
+    max-width: 570px;
+}
+
+.news-item {
+    flex: 1;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.news-item:hover {
+    box-shadow: 0px 18px 50px 0px #0000000D;
+
+}
+
+.news-item:hover .news-item__body {
+    border-color: transparent;
+}
+
+.news-item:hover .news-item__img {
+    transform: scale(1.1);
+}
+
+.news-item__thumb {
+    height: 172px;
+    overflow: hidden;
+}
+
+.news-item__img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.25s;
+}
+
+.news-item__body {
+    padding: 22px;
+    border: 1px solid #E8EBEE;
+    border-top: none;
+    border-radius: 0 0 12px 12px;
+    background: #fff;
+    transition: 0.25s;
+}
+
+.news-item__heading {
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.6;
+    color: var(--header-bg);
+
+}
+
+.news-item__desc {
+    margin-top: 10px;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.71;
+    color: #575F66;
+
+}
+
+.news-item__more {
+    display: inline-block;
+    margin-top: 12px;
+    font-size: 1.4rem;
+    line-height: 1.21;
+    color: var(--header-bg);
+
+}
+
+.news-item__more:hover {
+    color: var(--primary-color);
 }
