Làm phần Appointment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -678,3 +678,39 @@ a {
 .news-item__more:hover {
     color: var(--primary-color);
 }
+
+/* Appointment */
+.appointment {
+    margin-top: 85px 0 170px
+}
+
+.appointment__inner {
+    padding: 100px 70px;
+    background: #F6FBFF;
+    text-align: center;
+}
+
+.appointment__heading {
+    position: relative;
+    padding-bottom: 18px;
+}
+
+.appointment__heading::after {
+
+    content: "";
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+    width: 136px;
+    height: 2px;
+    background: var(--primary-color);
+}
+
+.appointment__desc {
+    max-width: 617px;
+    margin: 18px auto 38px;
+    font-size: 1.6rem;
+}
