Làm phần Footer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,14 @@ a {
     text-decoration: none;
 }
 
+input,
+textarea,
+select,
+button {
+    font-family: inherit;
+    font-size: inherit;
+}
+
 .container {
     width: 1170px;
     max-width: calc(100% - 48px);
@@ -145,6 +153,7 @@ a {
 }
 
 .logo__brand {
+    font-family: 'Sora', sans-serif;
     display: block;
     color: #fff;
     font-size: 1.8em;
@@ -713,4 +722,121 @@ a {
     max-width: 617px;
     margin: 18px auto 38px;
     font-size: 1.6rem;
+}
+
+/* Footer */
+.footer {
+    font-family: "Open Sans", serif;
+    margin-top: 170px;
+    background-color: var(--header-bg);
+    padding: 100px 0 42px;
+}
+
+.footer__row {
+    display: grid;
+    grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+    column-gap: 78px;
+}
+
+.footer__desc {
+    margin-top: 20px;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #A9B3BB;
+
+
+}
+
+.footer__heading {
+    margin-bottom: 20px;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75;
+    color: #FFFFFF;
+
+}
+
+.footer__item {
+    margin-bottom: 10px;
+}
+
+.footer__link {
+    font-size: 1.4rem;
+    line-height: 1.85;
+    color: #A9B3BB;
+    white-space: nowrap
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.footer__social {
+    display: flex;
+    column-gap: 10px;
+    margin-bottom: 28px;
+}
+
+.footer__social-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: #fff;
+    color: var(--primary-color);
+    transition: 0.25s;
+}
+
+.footer__social-btn:hover {
+    background-color: var(--primary-color);
+    color: #fff
+}
+
+.footer-form {
+    margin-top: 10px;
+    display: flex;
+    column-gap: 12px;
+
+}
+
+.footer-form__input {
+    width: 212px;
+    height: 46px;
+    border: 1px solid #406181;
+    border-radius: 4px;
+    outline: none;
+    background: transparent;
+    padding: 0 10px;
+    font-size: 1.4rem;
+    line-height: 1.85;
+    color: #fff;
+}
+
+.footer-form__input::placeholder {
+    font-size: 1.4rem;
+    line-height: 1.85;
+    color: #9CA8B1;
+}
+
+.footer-form__submit {
+    --height: 46px;
+    min-width: 108px;
+    border-radius: 4px;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.footer__copyright {
+    border-top: 1px solid #406181;
+    padding-top: 28px;
+}
+
+.footer__copyright-text {
+    font-size: 1.4rem;
+    line-height: 1.85;
+    text-align: center;
+    color: #AAB3BA;
+
 }
